# SentimentKit

./: AGENTS.md  CLAUDE.md  Makefile  Package.swift  README.md
Fixtures/golden/: expressions.json  messages.json
Sources/SentimentKit/: AnthropicSentimentScorer.swift  AppleIntelligenceScorer.swift  BuiltInLexicons.swift  CJKSearcher.swift  CoreMLScorer.swift  Expression.swift  ExpressionDictionary.swift  ExpressionType.swift  HTTPClient.swift  KeywordDetector.swift  LanguageDetector.swift  MessageAnalysis.swift  MessageToken.swift  NLTaggerScorer.swift  OpenAISentimentScorer.swift  PhraseLexicon.swift  SentimentAnalyzer.swift  SentimentConfig.swift  SentimentScorer.swift  SessionAnalysis.swift  TechnicalCommandGuard.swift  TextNormalization.swift  VADERRules.swift  WordPieceTokenizer.swift
Sources/golden-suggest/: main.swift
Tests/SentimentKitTests/: CJKSearcherTests.swift  CoreMLDownloadTests.swift  CoreMLScorerTests.swift  DictionaryCoverageTests.swift  (+15 more)
Tools/: add-dict-word.swift  analyze_phantom.py  extract_all_golden.py  extract_de_golden.py  extract_es_en_golden.py  extract_fr_golden.py  extract_pt_golden.py  extract_zh_golden.py  normalize-dictionaries.swift  search_zh_datasets.py
Tools/CoreMLConversion/: HF_README.md  README.md  convert.sh  convert_model.py  pyproject.toml  upload_to_hf.py
docs/: COMMON_VOCAB_SOURCES.md  DATA_PROVENANCE.md  DE_DATA_SOURCES.md  EN_DATA_SOURCES.md  FR_DATA_SOURCES.md  JA_DATA_SOURCES.md  KO_DATA_SOURCES.md  MULTILINGUAL_DATA_SOURCES.md  PRD.md  PT_DATA_SOURCES.md  RELEASE_CHECKLIST.md  ZH_DATA_SOURCES.md
(+60 files in other folders)
