[project]
name = "sentimentkit-coreml-conversion"
version = "0.1.0"
description = "Model conversion tooling for SentimentKit CoreML assets"
requires-python = ">=3.11,<3.12"
dependencies = [
    "coremltools>=8.1,<9",
    "transformers>=4.49,<5",
    "torch>=2.5,<2.6",
    "sentencepiece>=0.2,<0.3",
    "safetensors>=0.5,<0.6",
]

[tool.uv]
package = false
